# octopy

./: .gitignore  .gitmodules  DUP-OCROPY_LICENCE  Dockerfile  LICENSE  README.md  __init__.py  __main__.py  octopy.py  pagesegment.py  pyproject.toml  requirements.txt
cli/: octopy_cli.py  segment_cli.py  segtrain_cli.py  util.py
kraken/: binarization.py  blla.py
kraken/lib/: exceptions.py  segmentation.py  util.py
modules/: bls.py  blstrain.py  helper.py  postproc.py  pp.py  preproc.py  seg.py  segment.py  segtrain.py  transform.py  util.py
octopy/: segment.py  segtrain.py  util.py
pagexml/: __init__.py  element.py  page.py  pxml.py  schema.py  types.py
pagexml/geometry/: point.py  polygon.py
src/cli/: octopy_cli.py  segment_cli.py  segtrain_cli.py  shrink_cli.py  util.py
src/octopy/: __init__.py  cli.py  mappings.py  segment.py  segtrain.py  shrink.py  train.py  train2.py  util.py
src/octopy/cli/: __init__.py  inspect.py  segment.py  train.py  util.py
src/octopy/plugins/: __init__.py  kraken_polygonizer.py  octopy_polygonizer.py  segmentation.py
