[project]
name = "octopy"
version = "7.0.0"
description = "CLI toolkit for layout analysis of historical prints using Kraken"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["layout-analysis", "kraken", "pagexml", "historical-documents", "machine-learning"]
authors = [
    { name = "jahtz", email = "jahtz.dev@proton.me" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Intended Audience :: Science/Research",
    "Environment :: Console",
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "click>=8.1,<8.3",
    "kraken>=7.0.0b7",
    "pypxml>=5.1.0",
    "rich<14.0.0",
]

#[project.optional-dependencies]
#mod = ["kraken @ git+https://github.com/jahtz/kraken.git"]
#upstream = ["kraken @ git+https://github.com/mittagessen/kraken"]

[project.urls]
Homepage = "https://www.uni-wuerzburg.de/zpd/"
Repository = "https://github.com/jahtz/octopy"
Documentation = "https://github.com/jahtz/octopy#readme"
Issues = "https://github.com/jahtz/octopy/issues"

[project.scripts]
octopy = "octopy:cli_main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv]
prerelease = 'allow'
